# ta-numba

./: .gitignore  CHANGELOG.md  Cargo.toml  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml
examples/: strategy_usage_examples.py
rust/src/: helpers.rs  lib.rs  momentum.rs  others.rs  trend.rs  volatility.rs  volume.rs
rust/src/streaming/: mod.rs  momentum.rs  others.rs  trend.rs  volatility.rs  volume.rs
src/ta_numba/: __init__.py  _backend.py  momentum.py  others.py  strategy.py  streaming_strategy.py  trend.py  volatility.py  volume.py  warmup.py
src/ta_numba/streaming/: __init__.py  _rust_streaming.py  base.py  momentum.py  others.py  trend.py  volatility.py  volume.py
tests/performance/: README.md  test_comprehensive_comparison.py  test_streaming_indicators.py
tests/unit/: README.md  test_indicator.py  test_indicators.py  test_rust_parity.py  test_rust_streaming.py  test_strategy.py
