[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ta-numba"
version = "0.3.0"
authors = [{ name = "Beomgyu Joeng", email = "jaden.b.jeong@gmail.com" }]
description = "A high-performance technical analysis library with JIT compilation and streaming capabilities for real-time trading."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy", "numba"]
keywords = [
    "technical-analysis",
    "quantitative-analysis",
    "financial-engineering",
    "trading",
    "indicators",
    "numba",
    "performance",
    "streaming",
    "real-time",
    "jit-compilation",
]

[project.urls]
Homepage = "https://github.com/JadenJ09/ta-numba"
Issues = "https://github.com/JadenJ09/ta-numba/issues"
Repository = "https://github.com/JadenJ09/ta-numba"
Documentation = "https://github.com/JadenJ09/ta-numba#readme"

[project.optional-dependencies]
dev = ["pytest", "pandas", "ta"]

[tool.maturin]
python-source = "src"
module-name = "ta_numba._ta_numba_rs"
features = ["pyo3/extension-module"]
